tests/baselines/reference/symbolProperty21.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty21.ts(10,5): error TS2339: Property '__@toPrimitive' does not exist on type 'I<T, U>'.
tests/cases/conformance/es6/Symbols/symbolProperty21.ts(10,5): error TS2339: Property '__@toPrimitive' does not exist on type 'I<boolean, string>'.


==== tests/cases/conformance/es6/Symbols/symbolProperty21.ts (2 errors) ====
    interface I<T, U> {
        [Symbol.unscopables]: T;
        [Symbol.isConcatSpreadable]: U;
    }
    
    declare function foo<T, U>(p: I<T, U>): { t: T; u: U };
    
    foo({
        [Symbol.isConcatSpreadable]: "",
        [Symbol.toPrimitive]: 0,
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property '__@toPrimitive' does not exist on type 'I<T, U>'.
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property '__@toPrimitive' does not exist on type 'I<boolean, string>'.
        [Symbol.unscopables]: true
    });